--- a/ImgProc/mainwindow.ui
+++ b/ImgProc/mainwindow.ui
@@ -32,9 +32,9 @@
    <widget class="QPushButton" name="openImageBtn">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>440</x>
       <y>30</y>
-      <width>121</width>
+      <width>101</width>
       <height>31</height>
      </rect>
     </property>
@@ -50,7 +50,7 @@
    <widget class="QPushButton" name="viewImageBtn">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>550</x>
       <y>30</y>
       <width>161</width>
       <height>31</height>
@@ -297,24 +297,6 @@
     </property>
     <property name="text">
      <string>Save Image</string>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="threshVal">
-    <property name="geometry">
-     <rect>
-      <x>480</x>
-      <y>140</y>
-      <width>42</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="maximum">
-     <number>250</number>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -600,6 +582,39 @@
     </property>
     <property name="text">
      <string>Segmentation</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="loadImgBtn">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>30</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Load Image</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="threshVal">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>140</y>
+      <width>41</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
     </property>
    </widget>
   </widget>
