--- a/ImgProc/mainwindow.ui
+++ b/ImgProc/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>724</width>
-    <height>506</height>
+    <width>824</width>
+    <height>511</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,20 +19,20 @@
      <rect>
       <x>20</x>
       <y>30</y>
-      <width>311</width>
-      <height>31</height>
+      <width>371</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>11</pointsize>
+      <pointsize>10</pointsize>
      </font>
     </property>
    </widget>
    <widget class="QPushButton" name="openImageBtn">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>500</x>
       <y>30</y>
       <width>101</width>
       <height>31</height>
@@ -50,9 +50,9 @@
    <widget class="QPushButton" name="viewImageBtn">
     <property name="geometry">
      <rect>
-      <x>550</x>
+      <x>610</x>
       <y>30</y>
-      <width>161</width>
+      <width>191</width>
       <height>31</height>
      </rect>
     </property>
@@ -122,7 +122,7 @@
    <widget class="QCheckBox" name="kirBx">
     <property name="geometry">
      <rect>
-      <x>331</x>
+      <x>421</x>
       <y>199</y>
       <width>65</width>
       <height>22</height>
@@ -140,7 +140,7 @@
    <widget class="QCheckBox" name="threshBx">
     <property name="geometry">
      <rect>
-      <x>331</x>
+      <x>421</x>
       <y>141</y>
       <width>131</width>
       <height>22</height>
@@ -158,7 +158,7 @@
    <widget class="QCheckBox" name="gausBx">
     <property name="geometry">
      <rect>
-      <x>331</x>
+      <x>421</x>
       <y>170</y>
       <width>85</width>
       <height>22</height>
@@ -176,7 +176,7 @@
    <widget class="QCheckBox" name="prewBx">
     <property name="geometry">
      <rect>
-      <x>331</x>
+      <x>421</x>
       <y>228</y>
       <width>111</width>
       <height>22</height>
@@ -194,7 +194,7 @@
    <widget class="QCheckBox" name="waterBx">
     <property name="geometry">
      <rect>
-      <x>331</x>
+      <x>421</x>
       <y>286</y>
       <width>98</width>
       <height>22</height>
@@ -212,7 +212,7 @@
    <widget class="QCheckBox" name="sobBx">
     <property name="geometry">
      <rect>
-      <x>331</x>
+      <x>421</x>
       <y>257</y>
       <width>61</width>
       <height>22</height>
@@ -230,7 +230,7 @@
    <widget class="QCheckBox" name="eroBx">
     <property name="geometry">
      <rect>
-      <x>331</x>
+      <x>421</x>
       <y>344</y>
       <width>111</width>
       <height>22</height>
@@ -248,7 +248,7 @@
    <widget class="QCheckBox" name="diaBx">
     <property name="geometry">
      <rect>
-      <x>331</x>
+      <x>421</x>
       <y>315</y>
       <width>111</width>
       <height>22</height>
@@ -266,7 +266,7 @@
    <widget class="QPushButton" name="viewNewImageBtn">
     <property name="geometry">
      <rect>
-      <x>270</x>
+      <x>350</x>
       <y>410</y>
       <width>161</width>
       <height>31</height>
@@ -284,7 +284,7 @@
    <widget class="QPushButton" name="saveImageBtn">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>540</x>
       <y>410</y>
       <width>121</width>
       <height>31</height>
@@ -302,7 +302,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>620</x>
       <y>140</y>
       <width>161</width>
       <height>21</height>
@@ -320,7 +320,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>620</x>
       <y>320</y>
       <width>161</width>
       <height>21</height>
@@ -338,7 +338,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>620</x>
       <y>350</y>
       <width>161</width>
       <height>21</height>
@@ -356,7 +356,7 @@
    <widget class="QLineEdit" name="diaKern">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>570</x>
       <y>320</y>
       <width>41</width>
       <height>21</height>
@@ -371,7 +371,7 @@
    <widget class="QLineEdit" name="eroKern">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>570</x>
       <y>350</y>
       <width>41</width>
       <height>21</height>
@@ -383,10 +383,10 @@
      </font>
     </property>
    </widget>
-   <widget class="QLineEdit" name="gausKirn">
+   <widget class="QLineEdit" name="gausKern">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>570</x>
       <y>170</y>
       <width>41</width>
       <height>21</height>
@@ -401,7 +401,7 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>620</x>
       <y>200</y>
       <width>161</width>
       <height>21</height>
@@ -419,7 +419,7 @@
    <widget class="QLineEdit" name="kirKern">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>570</x>
       <y>200</y>
       <width>41</width>
       <height>21</height>
@@ -434,7 +434,7 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>620</x>
       <y>230</y>
       <width>161</width>
       <height>21</height>
@@ -452,7 +452,7 @@
    <widget class="QLineEdit" name="preKern">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>570</x>
       <y>230</y>
       <width>41</width>
       <height>21</height>
@@ -467,7 +467,7 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>620</x>
       <y>260</y>
       <width>161</width>
       <height>21</height>
@@ -485,7 +485,7 @@
    <widget class="QLineEdit" name="sobKern">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>570</x>
       <y>260</y>
       <width>41</width>
       <height>21</height>
@@ -501,7 +501,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>90</y>
+      <y>100</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -518,8 +518,8 @@
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>90</y>
+      <x>440</x>
+      <y>100</y>
       <width>171</width>
       <height>31</height>
      </rect>
@@ -536,7 +536,7 @@
    <widget class="QPushButton" name="loadImgBtn">
     <property name="geometry">
      <rect>
-      <x>340</x>
+      <x>400</x>
       <y>30</y>
       <width>91</width>
       <height>31</height>
@@ -554,7 +554,7 @@
    <widget class="QLineEdit" name="threshVal">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>570</x>
       <y>140</y>
       <width>41</width>
       <height>21</height>
@@ -569,7 +569,7 @@
    <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>620</x>
       <y>170</y>
       <width>161</width>
       <height>21</height>
@@ -587,7 +587,7 @@
    <widget class="QPushButton" name="clearBtn">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>160</x>
       <y>410</y>
       <width>161</width>
       <height>31</height>
@@ -602,6 +602,72 @@
      <string>Clear</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="hpKern">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>180</y>
+      <width>41</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>180</y>
+      <width>101</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Kernel size</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lpKern">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>210</y>
+      <width>41</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_13">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>210</y>
+      <width>101</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Kernel size</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QMenuBar" name="menubar">
@@ -609,7 +675,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>724</width>
+     <width>824</width>
      <height>25</height>
     </rect>
    </property>
