--- a/ImgProc/mainwindow.ui
+++ b/ImgProc/mainwindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTextEdit" name="filePathTxt">
     <property name="geometry">
@@ -46,6 +49,9 @@
     <property name="text">
      <string>Load</string>
     </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="viewImageBtn">
     <property name="geometry">
@@ -64,14 +70,17 @@
     <property name="text">
      <string>View Original Image</string>
     </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QCheckBox" name="histBx">
     <property name="geometry">
      <rect>
-      <x>21</x>
-      <y>141</y>
-      <width>182</width>
-      <height>28</height>
+      <x>22</x>
+      <y>142</y>
+      <width>228</width>
+      <height>33</height>
      </rect>
     </property>
     <property name="font">
@@ -86,10 +95,10 @@
    <widget class="QCheckBox" name="hpBx">
     <property name="geometry">
      <rect>
-      <x>21</x>
-      <y>176</y>
-      <width>131</width>
-      <height>28</height>
+      <x>22</x>
+      <y>182</y>
+      <width>161</width>
+      <height>33</height>
      </rect>
     </property>
     <property name="font">
@@ -104,10 +113,10 @@
    <widget class="QCheckBox" name="lpBx">
     <property name="geometry">
      <rect>
-      <x>21</x>
-      <y>211</y>
-      <width>127</width>
-      <height>28</height>
+      <x>22</x>
+      <y>222</y>
+      <width>154</width>
+      <height>33</height>
      </rect>
     </property>
     <property name="font">
@@ -117,96 +126,6 @@
     </property>
     <property name="text">
      <string>Low Pass Filter</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="threshBx">
-    <property name="geometry">
-     <rect>
-      <x>421</x>
-      <y>141</y>
-      <width>131</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Thresholding</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="gausBx">
-    <property name="geometry">
-     <rect>
-      <x>421</x>
-      <y>170</y>
-      <width>85</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Gaussian</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="sobBx">
-    <property name="geometry">
-     <rect>
-      <x>421</x>
-      <y>197</y>
-      <width>61</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Sobel</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="eroBx">
-    <property name="geometry">
-     <rect>
-      <x>421</x>
-      <y>254</y>
-      <width>111</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Erosion</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="diaBx">
-    <property name="geometry">
-     <rect>
-      <x>421</x>
-      <y>225</y>
-      <width>111</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Dialation</string>
     </property>
    </widget>
    <widget class="QPushButton" name="viewNewImageBtn">
@@ -226,6 +145,9 @@
     <property name="text">
      <string>View New Image</string>
     </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="saveImageBtn">
     <property name="geometry">
@@ -241,71 +163,23 @@
       <pointsize>12</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>Save Image</string>
     </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>620</x>
-      <y>140</y>
-      <width>161</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Max Value (0-255)</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>620</x>
-      <y>230</y>
-      <width>161</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Kernel size</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>620</x>
-      <y>260</y>
-      <width>161</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Kernel size</string>
+    <property name="checkable">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QLineEdit" name="diaKern">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>230</y>
-      <width>41</width>
-      <height>21</height>
+      <x>571</x>
+      <y>271</y>
+      <width>57</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -317,10 +191,10 @@
    <widget class="QLineEdit" name="eroKern">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>260</y>
-      <width>41</width>
-      <height>21</height>
+      <x>571</x>
+      <y>313</y>
+      <width>57</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -332,43 +206,25 @@
    <widget class="QLineEdit" name="gausKern">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>170</y>
-      <width>41</width>
-      <height>21</height>
+      <x>571</x>
+      <y>187</y>
+      <width>57</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>12</pointsize>
      </font>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>620</x>
-      <y>200</y>
-      <width>161</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Kernel size</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="sobKern">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>200</y>
-      <width>41</width>
-      <height>21</height>
+      <x>571</x>
+      <y>229</y>
+      <width>57</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -430,38 +286,23 @@
     <property name="text">
      <string>Browse</string>
     </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QLineEdit" name="threshVal">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>140</y>
-      <width>41</width>
-      <height>21</height>
+      <x>571</x>
+      <y>145</y>
+      <width>57</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>12</pointsize>
      </font>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_11">
-    <property name="geometry">
-     <rect>
-      <x>620</x>
-      <y>170</y>
-      <width>161</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Kernel size</string>
     </property>
    </widget>
    <widget class="QPushButton" name="clearBtn">
@@ -481,47 +322,32 @@
     <property name="text">
      <string>Clear</string>
     </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QLineEdit" name="hpKern">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>180</y>
-      <width>41</width>
-      <height>21</height>
+      <x>200</x>
+      <y>185</y>
+      <width>59</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>12</pointsize>
      </font>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_12">
-    <property name="geometry">
-     <rect>
-      <x>270</x>
-      <y>180</y>
-      <width>101</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Kernel size</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lpKern">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>210</y>
-      <width>41</width>
-      <height>21</height>
+      <x>200</x>
+      <y>227</y>
+      <width>59</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -530,13 +356,28 @@
      </font>
     </property>
    </widget>
-   <widget class="QLabel" name="label_13">
+   <widget class="QLineEdit" name="brightNum">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>210</y>
-      <width>101</width>
-      <height>21</height>
+      <x>200</x>
+      <y>269</y>
+      <width>59</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="brightBtn">
+    <property name="geometry">
+     <rect>
+      <x>22</x>
+      <y>262</y>
+      <width>154</width>
+      <height>33</height>
      </rect>
     </property>
     <property name="font">
@@ -545,33 +386,203 @@
      </font>
     </property>
     <property name="text">
-     <string>Kernel size</string>
+     <string>Brightness</string>
     </property>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>180</y>
+      <width>94</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_3">
+     <item>
+      <widget class="QLabel" name="label_12">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Kernel size</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_13">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Kernel size</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_14">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Units</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>430</x>
+      <y>140</y>
+      <width>145</width>
+      <height>195</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QCheckBox" name="threshBx">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Thresholding</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="gausBx">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Gaussian</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="sobBx">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Sobel</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="diaBx">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Dialation</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="eroBx">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Erosion</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>144</y>
+      <width>160</width>
+      <height>201</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_5">
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Max Value (0-255)</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_11">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Kernel size</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_8">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Kernel size</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Kernel size</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_3">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Kernel size</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>824</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuFile">
-    <property name="title">
-     <string>File</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menuClose">
-    <property name="title">
-     <string>Close</string>
-    </property>
-   </widget>
-   <addaction name="menuFile"/>
-   <addaction name="menuClose"/>
-  </widget>
  </widget>
  <resources/>
  <connections/>
